boilerplate for creating project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=DiemprojectsBackend
+
+spring.datasource.url=${JDBCUrl}
+spring.datasource.username=${JDBCUsername}
+spring.datasource.password=${JDBCPassword}
+
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=update
