--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.tourexam</groupId>
+    <groupId>org.exam</groupId>
     <artifactId>DiemprojectsBackend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>DiemprojectsBackend</name>
