--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=DiemprojectsBackend
+spring.application.name=DiemProjectsBackend
 
 spring.datasource.url=${JDBCUrl}
 spring.datasource.username=${JDBCUsername}
@@ -6,4 +6,4 @@ spring.datasource.password=${JDBCPassword}
 
 spring.sql.init.mode=always
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
